analytics-service/k8s/analytics-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-analytics-service
  namespace: analytics-service
  labels:
    app: analytics-service
    instance: app-analytics-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: analytics-service
      instance: app-analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
        instance: app-analytics-service
    spec:
      serviceAccountName: analytics-service-sa
      containers:
        - name: analytics-service
          # image: analytics-service:local # Local
          image: 370930247065.dkr.ecr.us-east-2.amazonaws.com/analytics-service:latest # Nuvem
          resources:
            requests:
              cpu: "20m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          ports:
            - containerPort: 8005
          readinessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8005
            initialDelaySeconds: 10
            periodSeconds: 15
