analytics-service/k8s/analytics-service-svc.yaml
# analytics-service
apiVersion: v1
kind: Service
metadata:
  name: svc-analytics-service
  namespace: analytics-service
  labels:
    app: analytics-service
    instance: svc-analytics-service
spec:
  type: ClusterIP
  selector:
    app: analytics-service
    instance: app-analytics-service
  ports:
    - port: 80
      targetPort: 8005
