analytics-service/k8s/analytics-service-ingress.yaml
# analytics-service
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-analytics-service
  namespace: analytics-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: svc-analytics-service
                port:
                  number: 80
